@@ -1,5 +1,12 @@
 2008-10-22  Jonathon Jongsma  <jonathon@quotidian.org>
 
+	* cairomm/context.cc:
+	* cairomm/context.h: add an overloaded get_matrix() function that returns a
+	copy of the matrix for convenience
+	* tests/test-context.cc: excercise the API
+
+2008-10-22  Jonathon Jongsma  <jonathon@quotidian.org>
+
 	* .gitignore:
 	* Makefile.am:
 	* configure.in: moved pkgconfig files to a data subdirectory, and consolidated
